--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,20 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.220</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+        </dependency>
+
     </dependencies>
 
     <profiles>
@@ -59,14 +73,6 @@
             <properties>
                 <spring.profiles.active>h2</spring.profiles.active>
             </properties>
-            <dependencies>
-                <dependency>
-                    <groupId>com.h2database</groupId>
-                    <artifactId>h2</artifactId>
-                    <!-- <scope>runtime</scope> -->
-                    <version>2.2.220</version>
-                </dependency>
-            </dependencies>
         </profile>
         <profile>
             <id>postgresql</id>
@@ -76,23 +82,15 @@
             <properties>
                 <spring.profiles.active>postgresql</spring.profiles.active>
             </properties>
-            <dependencies>
-                <dependency>
-                    <groupId>org.postgresql</groupId>
-                    <artifactId>postgresql</artifactId>
-                    <!--
-                    <scope>runtime</scope>
-                    -->
-                </dependency>
-                <dependency>
-                    <groupId>org.flywaydb</groupId>
-                    <artifactId>flyway-database-postgresql</artifactId>
-                    <!--
-                    <version>10.17.1</version>
-                    -->
-                </dependency>
-            </dependencies>
         </profile>
     </profiles>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
