--- a/src/main/resources/application-postgresql.properties
+++ b/src/main/resources/application-postgresql.properties
@@ -7,3 +7,8 @@ spring.flyway.url=jdbc:postgresql://localhost:5432/mptest
 spring.flyway.user=testuser
 spring.flyway.password=12345
 spring.flyway.locations=classpath:db/migration/postgresql
+spring.jpa.database=postgresql
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
